# classroom

./: .gitignore  README.md
api/: .env  Cargo.toml  README.md
api/database/: database.db
api/migrations/: 20241120195401_create-users.sql
api/src/: auth.rs  database.rs  error.rs  lib.rs  main.rs  prelude.rs  routes.rs  state.rs
api/src/database/: connection.rs
api/src/database/entities/: user.rs
api/src/middleware/: authorize.rs  mod.rs
api/src/models/: auth.rs  user.rs
api/src/routes/: auth.rs  index.rs  users.rs
api/src/services/: auth.rs  user.rs
api/src/services/entities/: user.rs
