[package]
name = "classroom_api"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.16.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde_json = "1.0.133"
thiserror = "2.0.3"
tracing = "0.1.40"

[dependencies.axum]
version = "0.7.9"
features = ["macros"]

[dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite", "chrono", "uuid"]

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.uuid]
version = "1.11.0"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.garde]
version = "0.20.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]
